--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -14,6 +14,14 @@ a code:hover {
 	color: #1d4b8f !important;
 }
 
+#footer a {
+	color: #90caf9 !important;
+}
+
+#footer a:hover {
+	color: #42a5f5 !important;
+}
+
 .imageblock {
 	display: flex;
 	flex-direction: column;
@@ -143,6 +151,11 @@ h1,
 
 .hidden {
 	display: none;
+}
+
+#footer {
+	background-color: black;
+	color: #e0e0e0;
 }
 
 /* ================================================== MOBILE EDGE CASES ==================================================== */
