--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -156,6 +156,9 @@ h1,
 #footer {
 	background-color: black;
 	color: #e0e0e0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 /* ================================================== MOBILE EDGE CASES ==================================================== */
